# MLDS_HW1-AutoTrading

./: README.md
auto_trading/: output.csv  pyproject.toml  requirements.txt  testing_data.csv  trader.py  train.py  training_data.csv
