[tool.poetry]
name = "auto-trading"
version = "0.1.0"
description = ""
authors = ["vivian <vivian.sh.fan@dct-cloud.com>"]
readme = "README.md"
packages = [{include = "auto_trading"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
